--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,8 +1,57 @@
 <div class="chat-header">
+  <div class="left-header">
+    <div class="header-title">
+    タイトル
+    </div>
+    </div>
+    <div class="right-header">
+    <div class="header-button">
+    <a href="#">チャット終了</a>
+    </div>
+    </div>
 </div>
 
 <div class="messages">
+<div class="message">
+<div class="upper-message">
+<div class="message-user">
+トム
+</div>
+<div class="message-date">
+2022/03/24(thu) 20:42:28
+</div>
+</div>
+<div class="lower-message">
+<div class="message-content">
+おはよう
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="upper-message">
+<div class="message-user">
+トム
+</div>
+<div class="message-date">
+2022/03/24(thu) 20:55:35
+</div>
+</div>
+<div xlass="lower-message">
+<div class="message-content">
+こんばんは
+</div>
+</div>
+</div>
 </div>
 
 <div class="form">
+<div class="form-input">
+<input class="form-message" placeholder="type a message">
+<label class="form-image">
+<span class="image-title">画像</span>
+<input type="file" class="hidden">
+</label>
+</div>
+<input class="form-submit" type="submit" value="送信">
 </div>
