チャット画面の編集

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,44 +3,16 @@
 <%= link_to current_user.name, edit_user_path(current_user) %>
     </div>
     <div class="create-room">
-    <a href="#">チャット作成</a>
+    <%= link_to "チャット作成", new_room_path %>
     </div>
 </div>
 
 <div class="rooms">
+<% current_user.rooms.each do |room| %>
   <div class="room">
     <div class="room-name">
-    <a href="#">techroom1</a>
+      <a href="#"><%= room.name %></a>
+      </div>
     </div>
+    <% end %>
     </div>
-    <div class="room">
-    <div class="room-name">
-    <a href="#">techroom2</a>
-    </div>
-    </div>
-        <div class="room">
-    <div class="room-name">
-    <a href="#">techroom3</a>
-    </div>
-    </div>
-        <div class="room">
-    <div class="room-name">
-    <a href="#">techroom4</a>
-    </div>
-    </div>
-        <div class="room">
-    <div class="room-name">
-    <a href="#">techroom5</a>
-    </div>
-    </div>
-        <div class="room">
-    <div class="room-name">
-    <a href="#">techroom6</a>
-    </div>
-    </div>
-        <div class="room">
-    <div class="room-name">
-    <a href="#">techroom7</a>
-    </div>
-    </div>
-</div>
